--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -1,10 +1,10 @@
 personnalities:
   - section1:
     list:
-       - "**SAR Norodom Preyaro du Cambodge**_"
+       - "**SAR Norodom Preyaro du Cambodge**"
       - "**SE David Luy**, _Ambassadeur du Cambodge en France_"
       - "**Vincent Eblé**, _Sénateur de Seine-et-Marne, président du Groupe d’amitié France-Cambodge-Laos au Sénat_"
-      - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale_"
+      - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale (2022-2024)_"
       - "**Nathalie Tortrat**, _maire de Gouvernes (Seine-et-Marne) et conseillère régionale d’Ile-de-France_"
       - "**Yann Dubosc**, _maire de Bussy-Saint-Georges, conseiller départemental de Seine-et-Marne, président de l’établissement public d’aménagement de Marne la Vallée (EpaMarne)_"
       - "**Emma Abreu**, _conseillère départementale de Seine-et-Marne_"
