--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -1,7 +1,7 @@
 personnalities:
   - section1:
     list:
-       - "**SAR Norodom Preyaro du Cambodge**"
+      - "**SAR Norodom Preyaro**, _Prince du Cambodge_"
       - "**SE David Luy**, _Ambassadeur du Cambodge en France_"
       - "**Vincent Eblé**, _Sénateur de Seine-et-Marne, président du Groupe d’amitié France-Cambodge-Laos au Sénat_"
       - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale (2022-2024)_"
