--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -10,4 +10,8 @@
   description: "réalisation des clips vidéo"
 - name: "Julie Kuoch"
   description: "réalisation des clips vidéo"
+- name: "Hélène Lê"
+  description: "conseil en stratégie"
+- name: "Mylène Verneau"
+  description: "Rédactrice"
 
