--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -14,4 +14,5 @@
   description: "conseil en stratégie"
 - name: "Mylène Verneau"
   description: "Rédactrice"
-
+- name: "Olivier Chhu"
+  description: "Communication digitale"
