--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -5,13 +5,13 @@
 - name: "Cécile Delattre"
   description: "Conception graphique"
 - name: "Polyka Srey"
-  description: "organisation des événements"
+  description: "Organisation des événements"
 - name: "Vincent Bailleul"
-  description: "réalisation des clips vidéo"
+  description: "Réalisation des clips vidéo"
 - name: "Julie Kuoch"
-  description: "réalisation des clips vidéo"
+  description: "Réalisation des clips vidéo"
 - name: "Hélène Lê"
-  description: "conseil en stratégie"
+  description: "Conseil en stratégie"
 - name: "Mylène Verneau"
   description: "Rédactrice"
 - name: "Olivier Chhu"
