--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -26,7 +26,7 @@
 - name: PF Millénaire
   picture: "/images/companies/PF-Millenaire.png"
 - name: OIA Galerie
-  picture: "/images/companies/galerie-oia.jpg"
+  picture: "/images/companies/galerie-oia.jpeg"
 - name: Hôtel Mercure Bussy-Saint-Georges
   picture: "/images/companies/mercure-bussy.jpeg"
   
