--- a/config.yml
+++ b/config.yml
@@ -101,7 +101,7 @@ Du fait de l’exil, de la guerre civile et de la période génocidaire, chacun 
     - name: facebook
       url: "https://www.facebook.com/Fragments.kh50"
     - name: instagram
-      url: "https://www.instagram.com/fragmentis.v/?igshid=YmMyMTA2M2Y"
+      url: "https://www.instagram.com/fragments_kh50/"
 
   # change favicon in images folder (icon for web tab)
   assets:
