--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -8,12 +8,13 @@ personnalities:
       - "**Nathalie Tortrat**, _maire de Gouvernes (Seine-et-Marne) et conseillère régionale d’Ile-de-France_"
       - "**Yann Dubosc**, _maire de Bussy-Saint-Georges, conseiller départemental de Seine-et-Marne, président de l’établissement public d’aménagement de Marne la Vallée (EpaMarne)_"
       - "**Emma Abreu**, _conseillère départementale de Seine-et-Marne_"
+      - "**Philippe Descrouet**, _Président de Val d'Europe agglomération,maire de Serris (Seine-et-Marne)_"
       - "**Mathieu Viskovic**, _maire de Noisiel (Seine-et-Marne)_"
       - "**Nicolas Delaunay**, _maire de Lognes (Seine-et-Marne)_"
       - "**Michel Gérès**, _maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Olivier Colaisseau**, _maire de Chanteloup-en-Brie (Seine-et-Marne)_"
       - "**Sithal Tieng**, _premier adjoint au maire de Noisiel (Seine-et-Marne)_"
-      - "**Nathalie Karajabarlian**, _adjointe au maire de Courtry (Seine-et-Marne)_"
+      - "**Nathalie Karajabarlian**, adjointe au maire de Courtry (Seine-et-Marne)_"
       - "**Mickaël Gaillard**, _adjoint au maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Caroline Digard**, _adjointe au maire de Villeparisis (Seine-et-Marne)_"
       - "**Rui Wang**, _conseiller municipal de Pantin (Seine-Saint-Denis)_"
@@ -29,7 +30,7 @@ personnalities:
       - "**Visal Meas**, _président de l'Association culturelle franco-khmère de Paris (ACFK) - école khmère de Paris_  "
       - "**Sivano Srey**, _président de l'association Selepak Khmer_"
       - "**Thomas Cai**, _président de l’AJCF, association des jeunes Chinois de France_"
-      - "**Clément Hong**, _vice-président de l'association Maison de la francophonie - Bussy-Saint-Georges_"
+      - "**Clément Hong**, _Président de l'association Maison de la francophonie - Bussy-Saint-Georges_"
 
   - section3:
     list:
@@ -55,6 +56,5 @@ personnalities:
       - "**Diana Chao**, _cheffe de Cuisine, créatrice de la chaîne YouTube Chez Mama Ly_"
       - "**Catherine Ngo**, _autrice_"
       - "**Mike Nguyen**, _comédien_"
-      - "**Jérémy Yantrak**, _artiste-tatoueur_"
       - "**Alexia Chaing**, _artiste-tatoueuse_"
       - "**Ramya Chuong**, _artiste-plasticien_"
