--- a/config.yml
+++ b/config.yml
@@ -20,8 +20,11 @@ menu:
     - name: Soutiens
       url: /soutiens/
       weight: 50
-    - name: "Shop"
+    - name: Contributeurs
       url: /contributeurs/
+      weight: 55
+    - name: "Shop"
+      url: /shop/
       weight: 60
     - name: Actus
       url: /events-actus/
