--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ menu:
     - name: Soutiens
       url: /soutiens/
       weight: 50
-    - name: Contributeurs
+    - name: "Contributeurs"
       url: /contributeurs/
       weight: 55
     - name: "Shop"
