--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -6,9 +6,9 @@ personnalities:
       - "**Vincent Eblé**, _Sénateur de Seine-et-Marne, président du Groupe d’amitié France-Cambodge-Laos au Sénat_"
       - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale (2022-2024)_"
       - "**Nathalie Tortrat**, _maire de Gouvernes (Seine-et-Marne) et conseillère régionale d’Ile-de-France_"
-      - "**Yann Dubosc**, _maire de Bussy-Saint-Georges, conseiller départemental de Seine-et-Marne, président de l’établissement public d’aménagement de Marne la Vallée (EpaMarne)_"
+      - "**Yann Dubosc** ,_maire de Bussy-Saint-Georges, conseiller départemental de Seine-et-Marne, président de l’établissement public d’aménagement de Marne la Vallée (EpaMarne)_"
       - "**Samuel Hazard**, _maire de Verdun, Président de la Communauté d’agglomération du Grand Verdun, Conseiller départemental de la Meuse_"
-      -"**Emma Abreu**, _conseillère départementale de Seine-et-Marne_"
+      - "**Emma Abreu**, _conseillère départementale de Seine-et-Marne_"
       - "**Philippe Descrouet**, _Président de Val d'Europe agglomération,maire de Serris (Seine-et-Marne)_"
       - "**Mathieu Viskovic**, _maire de Noisiel (Seine-et-Marne)_"
       - "**Nicolas Delaunay**, _maire de Lognes (Seine-et-Marne)_"
@@ -57,4 +57,7 @@ personnalities:
       - "**Catherine Ngo**, _autrice_"
       - "**Mike Nguyen**, _comédien_"
       - "**Alexia Chaing**, _artiste-tatoueuse_"
-      - "**Ramya Chuong**, _artiste-plasticien_"
+      - "**Patrick Ngoum (Pat Aiko)**, _artiste-tatoueuse_"
+      - "**Ramya Chuong**, _artiste-plasticien_" 
+      - "**Lee Djane**, _artiste-musicien_"
+      
