--- a/data/founders.yaml
+++ b/data/founders.yaml
@@ -22,7 +22,7 @@ founders:
     picture: "/images/founders/judith_khau.jpg"
   - fullname: "Hervé Cadet"
     bio: "Ancien fonctionnaire aux Affaires étrangères et attaché parlementaire, Hervé Cadet est investi dans la promotion artistique. Lié au Cambodge par sa belle-famille et déjà investi dans des associations défendant des valeurs universalistes, il a rejoint Fragments #KH50 pour contribuer à ce projet aux vocations mémorielles, patrimoniales et de vivre-ensemble."
-    picture: "/images/founders/herve_cadet.jpg"
+    picture: "/images/founders/herve_cadet.JPG"
   - fullname: "Alain Khau"
     bio: "Alain Khau est d’origine sino-cambodgienne. Ayant une longue expérience dans le secteur de l’Internet et de la cybersécurité, il souhaite mettre un point d’honneur à la transmission intergénérationnelle de la mémoire du génocide au Cambodge avec la création d’une plateforme numérique et sécurisée."
     picture: "/images/founders/alain_khau.jpg"
