--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -29,4 +29,7 @@
   picture: "/images/companies/galerie-oia.jpeg"
 - name: Hôtel Mercure Bussy-Saint-Georges
   picture: "/images/companies/mercure-bussy.jpeg"
-  
+ - name: Cercle Leonardo da Vinci
+  picture: "/images/companies/cercle-de-vinci.jpg" 
+ - name: Pâtes Thai
+  picture: "/images/companies/pates-thai.jpg" 
