--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -27,7 +27,7 @@
   picture: "/images/companies/PF-Millenaire.png"
 - name: OIA Galerie
   picture: "/images/companies/galerie-oia.jpeg"
-- name: Hôtel Mercure Bussy-Saint-Georges aa
+- name: Hôtel Mercure Bussy-Saint-Georges
   picture: "/images/companies/mercure-bussy.jpeg"
  - name: Cercle Leonardo da Vinci
   picture: "/images/companies/cercle-de-vinci.jpg" 
