--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -16,3 +16,5 @@
   description: "Rédactrice"
 - name: "Olivier Chhu"
   description: "Communication digitale"
+- name: "Ophélie Phuong"
+  description: "Communication digitale"
