--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -15,6 +15,6 @@
 - name: "Mylène Verneau"
   description: "Rédactrice"
 - name: "Olivier Chhu"
-  description: "Communication digitale"
+  description: "Responsable communication digitale et événementiel"
 - name: "Ophélie Phuong"
   description: "Communication digitale"
