--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -15,6 +15,8 @@
 - name: "Mylène Verneau"
   description: "Rédactrice"
 - name: "Olivier Chhu"
-  description: "Responsable communication digitale et événementiel"
+  description: "Responsable communication et événementiel"
 - name: "Ophélie Phuong"
   description: "Communication digitale"
+- name : "Toute l'équipe de volontaires"
+  description: "Patrick Chhu, Baran Torun, Michael Apollaire, Maryline Le, Visedth Ly, Valentine You
