--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -18,3 +18,5 @@
   description: "Responsable communication et événementiel"
 - name: "Ophélie Phuong"
   description: "Communication digitale"
+- name: "L'équipe de volontaires"
+  description: "Patrick Chhu, Baran Torun, Michael Apollaire, Maryline Le, Visedth Ly, Valentine You"
