--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -4,6 +4,8 @@
   description: "Création du site"
 - name: "Cécile Delattre"
   description: "Conception graphique"
+- name: "Hout Kov"
+  description: "photographe"
 - name: "Polyka Srey"
   description: "Organisation des événements"
 - name: "Vincent Bailleul"
