--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -10,6 +10,8 @@
   description: "Organisation des événements"
 - name: "Vincent Bailleul"
   description: "Réalisation des clips vidéo"
+ - name: "Chandha Kien"
+  description: "Coordination Pôle témoignages"
 - name: "Julie Kuoch"
   description: "Réalisation des clips vidéo"
 - name: "Hélène Lê"
