--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -33,3 +33,5 @@
   picture: "/images/companies/cercle-de-vinci.jpg"
 - name: Pâtes Thai
   picture: "/images/companies/pates-thai.jpg"
+- name: The Extraordinary Chambers in the Courts of Cambodia
+  picture: "/images/companies/ECCC.png"
