--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -35,3 +35,5 @@
   picture: "/images/companies/pates-thai.jpg"
 - name: The Extraordinary Chambers in the Courts of Cambodia
   picture: "/images/companies/ECCC.png"
+- name: Mission étrangères de Paris
+  picture: "/images/companies/MEP-Logo-RGBSB.png"
