--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -19,6 +19,8 @@
   picture: "/images/companies/avb.png"
 - name: Association des Jeunes chinois de France
   picture: "/images/companies/ajcf.png"
+- name: Association des Jeunes chinois de France
+  picture: "/images/companies/Banh-mi.png"
 - name: Maison de la Francophonie (Bussy Saint-Georges)
   picture: "/images/companies/maison-francophonie.png"
 - name: Majesté Diamants
