--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -19,7 +19,7 @@
   picture: "/images/companies/avb.png"
 - name: Association des Jeunes chinois de France
   picture: "/images/companies/ajcf.png"
-- name: Association des Jeunes chinois de France
+- name: Banh-Mi Media
   picture: "/images/companies/Banh-mi.png"
 - name: Maison de la Francophonie (Bussy Saint-Georges)
   picture: "/images/companies/maison-francophonie.png"
