--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -21,6 +21,8 @@
   picture: "/images/companies/ajcf.png"
 - name: Banh-Mi Media
   picture: "/images/companies/Banh-mi.png"
+- name: Les Jeunes Teochew
+  picture: "/images/companies/JTC.png"
 - name: Maison de la Francophonie (Bussy Saint-Georges)
   picture: "/images/companies/maison-francophonie.png"
 - name: Majesté Diamants
