--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -4,7 +4,7 @@ personnalities:
       - "**SAR Norodom Preyaro**, _Prince du Cambodge_"
       - "**SE David Luy**, _Ambassadeur du Cambodge en France_"
       - "**Vincent Eblé**, _Sénateur de Seine-et-Marne, président du Groupe d’amitié France-Cambodge-Laos au Sénat_"
-      - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale (2022-2024)_"
+      - "**Thomas Lam**, _député des Hauts-de-Seine, président du Groupe d’amitié France-Cambodge à l’Assemblée nationale_"
       - "**Nathalie Tortrat**, _maire de Gouvernes (Seine-et-Marne) et conseillère régionale d’Ile-de-France_"
       - "**Yann Dubosc** ,_maire de Bussy-Saint-Georges, conseiller départemental de Seine-et-Marne, président de l’établissement public d’aménagement de Marne la Vallée (EpaMarne)_"
       - "**Samuel Hazard**, _maire de Verdun,Président de la Communauté d’agglomération du Grand Verdun,Conseiller départemental de la Meuse_"
@@ -12,11 +12,10 @@ personnalities:
       - "**Philippe Descrouet**, _Président de Val d'Europe agglomération,maire de Serris (Seine-et-Marne)_"
       - "**Mathieu Viskovic**, _maire de Noisiel (Seine-et-Marne)_"
       - "**Nicolas Delaunay**, _maire de Lognes (Seine-et-Marne)_"
-      - "**Michel Gérès**, _maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Olivier Colaisseau**, _maire de Chanteloup-en-Brie (Seine-et-Marne)_"
+      - "**Mickaël Gaillard**, _maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Sithal Tieng**, _premier adjoint au maire de Noisiel (Seine-et-Marne)_"
       - "**Nathalie Karajabarlian**, adjointe au maire de Courtry (Seine-et-Marne)_"
-      - "**Mickaël Gaillard**, _adjoint au maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Caroline Digard**, _adjointe au maire de Villeparisis (Seine-et-Marne)_"
       - "**Rui Wang**, _conseiller municipal de Pantin (Seine-Saint-Denis)_"
       - "**Daniel Tran**, _conseiller d’arrondissement Paris 13e_"
@@ -29,9 +28,9 @@ personnalities:
       - "**Valéry Vuong**, _vice-président du Conseil représentatif des associations asiatiques de France (Craaf)_"
       - "**Soc Lam**, _avocat, président de l'association des avocats d'origine chinoise_"
       - "**Visal Meas**, _président de l'Association culturelle franco-khmère de Paris (ACFK) - école khmère de Paris_  "
-      - "**Sivano Srey**, _président de l'association Selepak Khmer_"
-      - "**Thomas Cai**, _président de l’AJCF, association des jeunes Chinois de France_"
-      - "**Clément Hong**, _Président de l'association Maison de la francophonie - Bussy-Saint-Georges_"
+      - "**Pitou Hoeung**, _présidente de l'association Selepak Khmer_"
+      - "**Daniel Tran**, _président de l’AJCF, association des jeunes Chinois de France_"
+      - "**Arnaud Huynh**, _président des Jeunes Teochew de France_"
 
   - section3:
     list:
