--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -31,6 +31,7 @@ personnalities:
       - "**Pitou Hoeung**, _présidente de l'association Selepak Khmer_"
       - "**Daniel Tran**, _président de l’AJCF, association des jeunes Chinois de France_"
       - "**Arnaud Huynh**, _président des Jeunes Teochew de France_"
+      - "**Jacques Hua**, _président d'Entreprises 13_"
 
   - section3:
     list:
