--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -37,3 +37,23 @@
   picture: "/images/companies/ECCC.png"
 - name: Mission étrangères de Paris
   picture: "/images/companies/MEP-Logo-RGBSB.png"
+- name: CFA Voyages
+  picture: "/images/companies/cfa.png"
+- name: Easy Virtual Tour
+  picture: "/images/companies/easyvirtualtour.png"
+- name: MJC Lognes
+  picture: "/images/companies/mjc.png"
+- name: Pâtisserie de saison
+  picture: "/images/companies/patisserie-saison.jpg"
+- name: Tang Frères
+  picture: "/images/companies/tang-freres.png"
+- name: Tran Traiteur
+  picture: "/images/companies/tran-traiteur.jpeg"
+- name: Varman Rénovation
+  picture: "/images/companies/varman.png"
+- name: Veng Hour
+  picture: "/images/companies/venghour.jpg"
+- name: Vision Center
+  picture: "/images/companies/vision center.jpg"
+
+  
